# latent-trajectory-pruning

./: README.md  main.py  pyproject.toml
src/: data.py  evaluator.py  extractor.py  generate_trajectories.py  modal_annotator.py  probe.py  verify_datasets.py
tests/: test_data.py  test_evaluator.py
