[project]
name = "latent-trajectory-pruning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.6.2",
    "modal>=0.62.0",
    "huggingface-hub>=0.23.0"
]
